tests/pass/recursive.us
struct List<T> {
    head:T,
    body:List<T>
}

fn main() -> List<i32> {
    let list = List {
        head:10,
        body:List {
            head:10,
            body:nil
        }
    };

}