tests/fail/field_access.us
struct List {
    head:i32,
    body:nil
}


fn main() -> i32{
    let list = List {
        head:10,
        body:nil
    };

    return list.ass; // Expect : struct `List` doesn't have a field named `ass`
}
